# sdl3-flecs

./: Cargo.toml
Shaders/Compiled/DXIL/: example.frag.dxil  example.vert.dxil  texture.frag.dxil  texture.vert.dxil
Shaders/Compiled/MSL/: example.frag.msl  example.vert.msl  texture.vert.msl
Shaders/Compiled/SPIRV/: example.frag.spv  example.vert.spv  texture.vert.spv
Shaders/Source/: compile.bat  example.frag.hlsl  example.vert.hlsl  texture.frag.hlsl  texture.vert.hlsl
src/: camera.rs  gpu.rs  main.rs  window.rs
src/modules/: sprites.rs
